<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.zezeno</groupId>
	<artifactId>zeze-java</artifactId>
	<version>1.4.3-SNAPSHOT</version>

	<name>zeze-java</name>
	<url>https://github.com/e2wugui/zeze</url>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/e2wugui/zeze</url>
	</scm>

	<distributionManagement>
		<repository>
			<id>releases</id>
			<url>http://10.12.7.230:9081/repository/maven-releases/</url>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<url>http://10.12.7.230:9081/repository/maven-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<!--
						<goals>
							<goal>jar</goal>
						</goals>
						-->
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<debuglevel>source,lines,vars</debuglevel>
					<parameters>true</parameters>
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>java.base/sun.security.rsa=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>java.base/sun.security.util=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
						<arg>-Xlint:unchecked</arg>
						<arg>-Xlint:deprecation</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>io.github.git-commit-id</groupId>
				<artifactId>git-commit-id-maven-plugin</artifactId>
				<version>6.0.0</version>
				<executions>
					<execution>
						<id>get-the-git-infos</id>
						<goals>
							<goal>revision</goal>
						</goals>
						<phase>initialize</phase>
					</execution>
				</executions>
				<configuration>
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<generateGitPropertiesFilename>${project.build.outputDirectory}/zeze.git.properties</generateGitPropertiesFilename>
					<includeOnlyProperties>
						<includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
						<includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>
					</includeOnlyProperties>
					<commitIdGenerationMode>full</commitIdGenerationMode>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<log4j.version>2.23.0</log4j.version>
		<annotations.version>24.1.0</annotations.version>
		<pcollectons.version>4.0.1</pcollectons.version>
		<rocksdbjni.version>8.11.3</rocksdbjni.version>
		<netty.version>4.1.105.Final</netty.version>
		<slf4j.version>2.0.12</slf4j.version>
		<tikv.version>3.3.5</tikv.version>
		<druid.version>1.2.21</druid.version>
		<mysql-connector-j.version>8.3.0</mysql-connector-j.version>
		<aws-java-sdk-dynamodb.version>1.12.568</aws-java-sdk-dynamodb.version>
		<rocketmq-client.version>4.9.8</rocketmq-client.version>
		<javaee-api.version>8.0.1</javaee-api.version>
		<jgrapht-core.version>1.5.2</jgrapht-core.version>
		<opencsv.version>5.9</opencsv.version>
		<zstd-jni.version>1.5.5-6</zstd-jni.version>
		<junit.version>4.13.2</junit.version>
	</properties>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j.version}</version>
		</dependency>

		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>${annotations.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.pcollections/pcollections -->
		<dependency>
			<groupId>org.pcollections</groupId>
			<artifactId>pcollections</artifactId>
			<version>${pcollectons.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.rocksdb/rocksdbjni -->
		<dependency>
			<groupId>org.rocksdb</groupId>
			<artifactId>rocksdbjni</artifactId>
			<version>${rocksdbjni.version}</version>
		</dependency>

		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-codec-http</artifactId>
			<version>${netty.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-transport-native-epoll</artifactId>
			<version>${netty.version}</version>
			<classifier>linux-x86_64</classifier>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j2-impl</artifactId>
			<version>${log4j.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.tikv/tikv-client-java -->
		<dependency>
			<groupId>org.tikv</groupId>
			<artifactId>tikv-client-java</artifactId>
			<version>${tikv.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>druid</artifactId>
			<version>${druid.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<version>${mysql-connector-j.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk-dynamodb</artifactId>
			<version>${aws-java-sdk-dynamodb.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.rocketmq</groupId>
			<artifactId>rocketmq-client</artifactId>
			<version>${rocketmq-client.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
			<version>${javaee-api.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.jgrapht</groupId>
			<artifactId>jgrapht-core</artifactId>
			<version>${jgrapht-core.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>${opencsv.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.github.luben</groupId>
			<artifactId>zstd-jni</artifactId>
			<version>${zstd-jni.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
